feat/isenção_no_cadastro